--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  version: "0.2.0",
-  name: "telstra-api",
-  description: "A node.js module for interfacing with the Telstra Dev APIs",
-  keywords: [
+  "author": "Joshua 'JD' Davison <joshua@davison.asia> (http://jd.davison.asia/)",
+  "bugs": {
+    "url": "https://github.com/ozjd/Telstra-API/issues"
+  },
+  "description": "A node.js module for interfacing with the Telstra Dev APIs",
+  "directories": {
+    "lib": "./lib"
+  },
+  "homepage": "https://github.com/ozjd/Telstra-API",
+  "keywords": [
     "Telstra",
     "SMS",
     "WiFi",
     "Hotspot",
     "Air"
   ],
-  preferGlobal: false,
-  homepage: "https://github.com/ozjd/Telstra-API",
-  author: "Joshua 'JD' Davison <joshua@davison.asia> (http://jd.davison.asia)",
-  repository: {
-    type: "git",
-    url: "https://github.com/ozjd/Telstra-API"
+  "license": "MIT",
+  "main": "./t.api.js",
+  "name": "telstra-api",
+  "preferGlobal": false,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ozjd/Telstra-API"
   },
-  bugs: {
-    url: "https://github.com/ozjd/Telstra-API/issues"
-  },
-  directories: {
-    lib: "./lib",
-  },
-  main: "./t.api.js",
-  license: "Artistic-2.0"
+  "version": "0.2.0"
 }
